k8s/ema-admin-app-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ema-admin-app-nodeport-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: ema-admin-app
