k8s/nv-admin-app-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nv-admin-app-nodeport-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: nv-admin-app
